@@ -42,9 +42,10 @@ char *get_sysinfo(void)
 	FILE		*fp;
 	static char	buf[SS_BUFSIZE];
 	char		*temp;
+	time_t		startdate;
 
 	sprintf(buf, "201:1,16;");
-	temp = calloc(128, sizeof(char));
+	temp = calloc(PATH_MAX, sizeof(char));
 	sprintf(temp, "%s/etc/sysinfo.data", getenv("MBSE_ROOT"));
 
 	if ((fp = fopen(temp, "r")) == NULL) {
@@ -53,10 +54,13 @@ char *get_sysinfo(void)
 	}
 	free(temp);
 
-	if (fread(&SYSINFO, sizeof(SYSINFO), 1, fp) == 1)
+	if (fread(&SYSINFO, sizeof(SYSINFO), 1, fp) == 1) {
+		startdate = SYSINFO.StartDate;
 		sprintf(buf, "100:7,%ld,%ld,%ld,%ld,%ld,%s,%s;", SYSINFO.SystemCalls,
 			SYSINFO.Pots, SYSINFO.ISDN, SYSINFO.Network, SYSINFO.Local,
-			ctime(&SYSINFO.StartDate), SYSINFO.LastCaller);
+			ctime(&startdate), SYSINFO.LastCaller);
+	}
+
 	fclose(fp);
 
 	return buf;
